// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`DappLogoWithTxStatus > renders without error > with dapp name 1`] = `
<DocumentFragment>
  <div
    data-testid="img-dapp-image"
  >
    <img
      src="https://example.com/dapp.png"
    />
  </div>
</DocumentFragment>
`;

exports[`DappLogoWithWCBadge > renders without error 1`] = `
<DocumentFragment>
  <div
    class="flex flex-col basis-auto box-border relative min-h-[0px] min-w-[0px] shrink-0 items-center justify-center w-[var(--c-w)] h-[var(--c-h)]"
    style="--c-w: 44px; --c-h: 44px;"
  >
    <div
      class="flex flex-col items-stretch basis-auto box-border relative min-h-[0px] min-w-[0px] shrink-0 top-[0px] left-[2px]"
    >
      <div
        data-testid="img-dapp-image"
      >
        <img
          src="https://example.com/dapp.png"
        />
      </div>
    </div>
    <div
      class="flex flex-col items-stretch basis-auto box-border min-h-[0px] min-w-[0px] shrink-0 absolute right-[var(--c-right)] bottom-[var(--c-bottom)]"
      style="--c-right: -2px; --c-bottom: -2px;"
    >
      <div
        class="flex flex-col basis-auto box-border relative min-h-[0px] min-w-[0px] shrink-0 items-center justify-center overflow-hidden z-[var(--c-z)]"
        data-testid="network-logo-42161"
        style="--c-z: 10; width: 19.2px; height: 19.2px; border-radius: 5.76px; border-width: 1.6px;"
      >
        <div
          class="css-view-175oi2r r-flexBasis-1mlwlqe r-overflow-1udh08x r-zIndex-417010"
          style="object-fit: contain; width: 17px; height: 17px;"
        >
          <div
            class="css-view-175oi2r r-backgroundColor-1niwhzg r-backgroundPosition-vvn4in r-backgroundRepeat-u6sd8q r-bottom-1p0dtai r-height-1pi2tsx r-left-1d2f490 r-position-u8s1d r-right-zchlnj r-top-ipm5af r-width-13qz1uu r-zIndex-1wyyakw r-backgroundSize-4gszlv"
            style="background-image: url(mock-asset-ARBITRUM_LOGO.png);"
          />
          <img
            alt=""
            class="css-accessibilityImage-9pa8cd"
            draggable="false"
            src="mock-asset-ARBITRUM_LOGO.png"
          />
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`LogoWithTxStatus > renders without error 1`] = `
<DocumentFragment>
  <div
    class="flex flex-col basis-auto box-border relative min-h-[0px] min-w-[0px] shrink-0 items-center justify-center w-[40px] h-[40px]"
  >
    <div
      class="flex flex-col basis-auto box-border min-h-[0px] min-w-[0px] shrink-0 items-center justify-center w-[40px] h-[40px] relative [pointer-events:auto]"
      data-testid="token-logo"
    >
      <div
        class="flex flex-col items-stretch basis-auto box-border min-h-[0px] min-w-[0px] shrink-0 w-[var(--c-w)] h-[var(--c-h)] bg-[color:var(--c-bg)] rounded-[999999px] opacity-[0] absolute top-[var(--c-top)] left-[var(--c-left)] z-[var(--c-z)]"
        style="--c-w: 96%; --c-h: 96%; --c-bg: #FFFFFF; --c-top: 2%; --c-left: 2%; --c-z: 0;"
      />
      <div
        data-testid="img-token-image"
      >
        <img
          src="https://token-icons.s3.amazonaws.com/eth.png"
        />
      </div>
    </div>
    <div
      class="flex flex-col items-stretch basis-auto box-border min-h-[0px] min-w-[0px] shrink-0 absolute right-[var(--c-right)] bottom-[var(--c-bottom)] z-[var(--c-z)]"
      style="--c-right: -4px; --c-bottom: -4px; --c-z: 10;"
    >
      <div
        class="flex flex-col basis-auto box-border relative min-h-[0px] min-w-[0px] shrink-0 items-center justify-center w-[20px] h-[20px] bg-surface1 rounded-[999999px] overflow-hidden"
      >
        <div
          data-testid="status-icon"
          fill="rgba(255, 255, 255, 0.65)"
          stroke-width="8"
          style="width: 20px; height: 20px;"
          viewbox="0 0 16 16"
        >
          <div
            d="M7.99968 14.6668C11.6816 14.6668 14.6663 11.6821 14.6663 8.00016C14.6663 4.31826 11.6816 1.3335 7.99968 1.3335C4.31778 1.3335 1.33301 4.31826 1.33301 8.00016C1.33301 11.6821 4.31778 14.6668 7.99968 14.6668Z"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="1.5"
          />
          <div
            d="M10.6663 8.00032L7.99965 5.33365L5.33299 8.00032"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="1.5"
          />
          <div
            d="M7.99933 10.6668V5.33349"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="1.5"
          />
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
